--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,21 @@
   text-align: center;
 }
 
-.box-dad{
+.header{
   border: 3px solid  black;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 30px;
-  
+  padding: 30px; 
+}
+.navigation{
+  border: 3px solid black;
+  padding: 10px;
+}
+.navigation a{
+  text-decoration:none;
+  color: black;
+  border: 1px solid black;
+  padding: 10px;
 }
